[package]
name = "youki"
version = "0.0.1"
authors = ["utam0k <k0ma@utam0k.jp>"]
edition = "2018"
description = "A container runtime written in Rust"

[features]
default = ["systemd_cgroups"]
systemd_cgroups = ["systemd"]

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["std", "suggestions", "derive"]

[dependencies]
nix = "0.22.0"
procfs = "0.9.1"
# Waiting for new caps release, replace git with version on release
caps = { git = "https://github.com/lucab/caps-rs", rev = "cb54844", features = ["serde_support"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prctl = "1.0.0"
libc = "0.2.84"
log = "0.4"
anyhow = "1.0"
mio = { version = "0.7.13", features = ["os-ext", "os-poll"] }
chrono = { version="0.4", features = ["serde"] }
once_cell = "1.6.0"
futures = { version = "0.3", features = ["thread-pool"] }
cgroups = { version = "0.1.0", path = "./cgroups" }
systemd = { version = "0.8", default-features = false, optional = true }
dbus = "0.9.2"
tabwriter = "1"
fastrand = "1.4.1"
crossbeam-channel = "0.5"
oci_spec = {path = "../oci-spec-rs"}

[dev-dependencies]
oci_spec = {path = "../oci-spec-rs", features = ["proptests"]}
quickcheck = "1"
serial_test = "0.5.1"

[profile.release]
lto = true