[package]
name = "youki"
version = "0.0.1"
authors = ["utam0k <k0ma@utam0k.jp>"]
edition = "2018"
description = "A container runtime written in Rust"

[workspace]
members = [
    "crates/*"
]
exclude = [
    "youki_integration_test",
]

[features]
default = ["systemd_cgroups"]
systemd_cgroups = ["systemd"]

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = ["std", "suggestions", "derive", "cargo"]

[dependencies]
nix = "0.22.0"
procfs = "0.11.0"
# Waiting for new caps release, replace git with version on release
caps = { git = "https://github.com/lucab/caps-rs", rev = "cb54844", features = ["serde_support"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prctl = "1.0.0"
libc = "0.2.84"
log = "0.4"
anyhow = "1.0"
mio = { version = "0.7.13", features = ["os-ext", "os-poll"] }
chrono = { version="0.4", features = ["serde"] }
once_cell = "1.6.0"
futures = { version = "0.3", features = ["thread-pool"] }
oci-spec = { git = "https://github.com/containers/oci-spec-rs",  rev = "d6fb1e91742313cd0d0085937e2d6df5d4669720" }
cgroups = { version = "0.1.0", path = "./crates/cgroups" }
systemd = { version = "0.8", default-features = false, optional = true }
dbus = "0.9.2"
tabwriter = "1"
fastrand = "1.4.1"
crossbeam-channel = "0.5"
seccomp = { version = "0.1.0", path = "./crates/seccomp" }
pentacle = "1.0.0"
path-clean = "0.1.0"

[dev-dependencies]
oci-spec = { git = "https://github.com/containers/oci-spec-rs",  rev = "d6fb1e91742313cd0d0085937e2d6df5d4669720", features = ["proptests"] }
quickcheck = "1"
serial_test = "0.5.1"

[profile.release]
lto = true
