[package]
name = "cgroups"
version = "0.1.0"
edition = "2018"

[features]
default = ["systemd_cgroups"]
systemd_cgroups = ["systemd"]

[dependencies]
nix = "0.22.0"
procfs = "0.9.1"
log = "0.4"
anyhow = "1.0"
oci_spec = { git = "https://github.com/containers/oci-spec-rs", rev = "e0de21b89dc1e65f69a5f45a08bbe426787c7fa1"}
systemd = { version = "0.8", default-features = false, optional = true }
dbus = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.51"
tokio-uring = "0.1.0"
tokio = { version = "1.10.0", features = ["io-util"] }

[dev-dependencies]
oci_spec = { git = "https://github.com/containers/oci-spec-rs", rev = "e0de21b89dc1e65f69a5f45a08bbe426787c7fa1", features = ["proptests"]}
quickcheck = "1"
