[package]
name = "cgroups"
version = "0.1.0"
edition = "2018"
autoexamples = false

[features]
default = ["systemd_cgroups"]
systemd_cgroups = ["systemd"]
cgroupsv2_devices = ["rbpf", "libbpf-sys", "errno", "libc"]

[dependencies]
nix = "0.22.0"
procfs = "0.10.1"
log = "0.4"
anyhow = "1.0"
oci-spec = { git = "https://github.com/containers/oci-spec-rs",  rev = "3d5132a18c305be59d58187201429d8f0243b513" }
systemd = { version = "0.8", default-features = false, optional = true }
dbus = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
rbpf = {version = "0.1.0", optional = true }
libbpf-sys = { version = "0.4.0-2", optional = true }
errno = { version = "0.2.7", optional = true }
libc = { version = "0.2.84", optional = true }

[dev-dependencies]
oci-spec = { git = "https://github.com/containers/oci-spec-rs",  rev = "3d5132a18c305be59d58187201429d8f0243b513", features = ["proptests"] }
quickcheck = "1"
clap = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
