[package]
name = "oci_spec"
version = "0.1.0"
edition = "2018"

[features]
default = []
proptests = ["quickcheck"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nix = "0.19.1"
anyhow = "1.0"
serde_json = "1.0"
# Waiting for new caps release, replace git with version on release
caps = { git = "https://github.com/lucab/caps-rs", rev = "cb54844", features = ["serde_support"] }
quickcheck = { version = "1", optional = true }
tempfile = "3"