[package]
name = "youki_integration_test"
version = "0.1.0"
edition = "2018"

[dependencies.clap]
version = "=3.0.0-beta.2"
default-features = false
features = ["std", "suggestions", "derive"]

[dependencies.clap_derive]
version = "=3.0.0-beta.2"
default-features = true

[workspace]
members = [
    "test_framework",
]

[dependencies]
uuid = "0.8"
rand = "0.8.0"
tar = "0.4"
flate2 = "1.0"
test_framework = { path = "./test_framework"}
anyhow = "1.0"
once_cell = "1.8.0"
oci-spec = "0.5.1"
which = "4.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"