[package]
name = "common"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
repository = "https://github.com/containers/youki"
homepage = "https://containers.github.io/youki"
readme = "../../README.md"
authors = ["youki team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nix = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.24"
rand = "0.8.5"

[features]
default = []
test_utils = []