[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version="0.4" }
flate2 = "1.0"
libcgroups = { path = "../libcgroups" }
libcontainer = { path = "../libcontainer" }
log = { version = "0.4", features = ["std"] }
nix = "0.23.1"
num_cpus = "1.13"
oci-spec = { git = "https://github.com/containers/oci-spec-rs", rev = "54c5e386f01ab37c9305cc4a83404eb157e42440" }
once_cell = "1.9.0"
pnet = "0.29.0"
procfs = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
test_framework = { path = "../test_framework" }
uuid = "0.8"
which = "4.2.4"

[dependencies.clap]
version = "=3.0.0-beta.5"
default-features = false
features = ["std", "suggestions", "derive"]

[dependencies.clap_derive]
version = "=3.0.0-beta.5"
default-features = true
