[package]
name = "liboci-cli"
version = "0.0.3"
description = "Parse command line arguments for OCI container runtimes"
license-file = "../../LICENSE"
repository = "https://github.com/containers/youki"
homepage = "https://containers.github.io/youki"
readme = "README.md"
authors = ["youki team"]
edition = "2021"
keywords = ["youki", "container", "oci"]

[dependencies.clap]
version = "3.2.21"
default-features = false
features = ["std", "suggestions", "derive", "cargo"]
