[package]
name = "liboci-cli"
version = "0.4.1" # MARK: Version
description = "Parse command line arguments for OCI container runtimes"
license = "Apache-2.0"
repository = "https://github.com/containers/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2021"
keywords = ["youki", "container", "oci"]

[dependencies.clap]
version = "4.1.6"
default-features = false
features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"]
