[package]
name = "youki"
version = "0.0.5"
description = "A container runtime written in Rust"
license-file = "../../LICENSE"
repository = "https://github.com/containers/youki"
homepage = "https://containers.github.io/youki"
readme = "../../README.md"
authors = ["youki team"]
edition = "2021"
build = "build.rs"
keywords = ["youki", "container"]

[features]
systemd = ["libcgroups/systemd", "libcontainer/systemd", "v2"]
v2 = ["libcgroups/v2", "libcontainer/v2"]
v1 = ["libcgroups/v1", "libcontainer/v1"]
cgroupsv2_devices = ["libcgroups/cgroupsv2_devices", "libcontainer/cgroupsv2_devices"]
wasm-wasmer = ["wasmer", "wasmer-wasix"]
wasm-wasmedge = ["wasmedge-sdk/standalone"]
wasm-wasmtime = ["wasmtime", "wasmtime-wasi"]

[dependencies.clap]
version = "4.1.6"
default-features = false
features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"]

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4", features = ["serde"] }
libcgroups = { version = "0.0.5", path = "../libcgroups", default-features = false }
libcontainer = { version = "0.0.5", path = "../libcontainer", default-features = false }
liboci-cli = { version = "0.0.5", path = "../liboci-cli" }
log = { version = "0.4", features = ["std"] }
nix = "0.26.2"
oci-spec = { version = "^0.6.0", features = ["runtime"] }
once_cell = "1.17.1"
pentacle = "1.0.0"
procfs = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1"
clap_complete = "4.1.3"
caps = "0.5.5"
wasmer = { version = "3.2.0", optional = true }
wasmer-wasix = { version = "0.4.0", optional = true }

wasmedge-sdk = { version = "0.7.1", optional = true }
wasmtime = {version = "8.0.1", optional = true }
wasmtime-wasi = {version = "8.0.1", optional = true }

[dev-dependencies]
serial_test = "2.0.0"

[build-dependencies]
anyhow = "1.0.71"
vergen = {version ="8.1.3", features =["git","gitcl"]}
