[package]
name = "youki"
version = "0.2.0"
description = "A container runtime written in Rust"
license-file = "../../LICENSE"
repository = "https://github.com/containers/youki"
homepage = "https://containers.github.io/youki"
readme = "../../README.md"
authors = ["youki team"]
edition = "2021"
build = "build.rs"
keywords = ["youki", "container"]

[features]
systemd = ["libcgroups/systemd", "libcontainer/systemd", "v2"]
v2 = ["libcgroups/v2", "libcontainer/v2"]
v1 = ["libcgroups/v1", "libcontainer/v1"]
cgroupsv2_devices = ["libcgroups/cgroupsv2_devices", "libcontainer/cgroupsv2_devices"]

wasm-wasmer = ["wasmer", "wasmer-wasix"]
wasm-wasmedge = ["wasmedge-sdk/standalone", "wasmedge-sdk/static"]
wasm-wasmtime = ["wasmtime", "wasmtime-wasi"]

[dependencies.clap]
version = "4.1.6"
default-features = false
features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"]

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libcgroups = { version = "0.2.0", path = "../libcgroups", default-features = false }
libcontainer = { version = "0.2.0", path = "../libcontainer", default-features = false }
liboci-cli = { version = "0.2.0", path = "../liboci-cli" }
nix = "0.27.1"
once_cell = "1.18.0"
pentacle = "1.0.0"
procfs = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1"
clap_complete = "4.1.3"
caps = "0.5.5"
wasmer = { version = "4.0.0", optional = true }
wasmer-wasix = { version = "0.9.0", optional = true }
wasmedge-sdk = { version = "0.12.2", optional = true }
wasmtime = {version = "10.0.2", optional = true }
wasmtime-wasi = {version = "10.0.2", optional = true }
tracing = { version = "0.1.37", features = ["attributes"]}
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
tracing-journald = "0.3.0"

[dev-dependencies]
serial_test = "2.0.0"
tempfile = "3"
scopeguard = "1.2.0"

[build-dependencies]
anyhow = "1.0.75"
vergen = {version ="8.2.5", features =["git","gitcl"]}

[[bin]]
name = "youki"
path = "src/main.rs"