[package]
name = "seccomp"
version = "0.0.0"
description = "Library for seccomp"
license = "Apache-2.0"
repository = "https://github.com/containers/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2021"
autoexamples = true
keywords = ["youki", "container", "seccomp"]

[dependencies]
nix = { version = "0.27.1", features = [
    "ioctl",
    "socket",
    "sched",
    "mount",
    "dir",
] }
thiserror = "1.0.57"
prctl = "1.0.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
syscall-numbers = "3.1.1"
syscalls = { version = "0.6.18", features = ["std", "serde", "aarch64", "x86_64"]}