[package]
name = "contest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1.0"
libcgroups = { path = "../../../crates/libcgroups" }
libcontainer = { path = "../../../crates/libcontainer" }
nix = "0.27.1"
num_cpus = "1.16"
oci-spec = { version = "0.6.4", features = ["runtime"] }
once_cell = "1.19.0"
pnet_datalink = "0.34.0"
procfs = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
test_framework = { path = "../test_framework" }
uuid = "1.8"
which = "6.0.0"
tempfile = "3"
scopeguard = "1.2.0"
tracing = { version = "0.1.40", features = ["attributes"]}
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

[dependencies.clap]
version = "4.1.6"
default-features = false
features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"]

[dependencies.clap_derive]
version = "4.0.21"
default-features = true
