[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version="0.4" }
flate2 = "1.0"
libcgroups = { path = "../../../crates/libcgroups" }
libcontainer = { path = "../../../crates/libcontainer" }
log = { version = "0.4", features = ["std"] }
nix = "0.24.2"
num_cpus = "1.13"
oci-spec = "0.5.7"
once_cell = "1.13.0"
pnet_datalink = "0.31.0"
procfs = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
test_framework = { path = "../test_framework" }
uuid = "1.1"
which = "4.2.4"

[dependencies.clap]
version = "3.2.17"
default-features = false
features = ["std", "suggestions", "derive", "cargo"]

[dependencies.clap_derive]
version = "3.1.7"
default-features = true
