[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version="0.4" }
flate2 = "1.0"
libcgroups = { path = "../../../crates/libcgroups" }
libcontainer = { path = "../../../crates/libcontainer" }
log = { version = "0.4", features = ["std"] }
nix = "0.25.0"
num_cpus = "1.15"
oci-spec = "0.6.0"
once_cell = "1.17.0"
pnet_datalink = "0.31.0"
procfs = "0.14.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
test_framework = { path = "../test_framework" }
uuid = "1.2"
which = "4.3.0"

[dependencies.clap]
version = "4.0.32"
default-features = false
features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"]

[dependencies.clap_derive]
version = "4.0.21"
default-features = true
